Package_Tools/pas_units/libav/fertig/libavformat/avformat.pas


function avformat_write_header(s: PAVFormatContext; options: PPAVDictionary): longint; cdecl; external libavformat;
function avformat_init_output(s: PAVFormatContext; options: PPAVDictionary): longint; cdecl; external libavformat;
function av_write_frame(s: PAVFormatContext; pkt: PAVPacket): longint; cdecl; external libavformat;
function av_interleaved_write_frame(s: PAVFormatContext; pkt: PAVPacket): longint; cdecl; external libavformat;
function av_write_uncoded_frame(s: PAVFormatContext; stream_index: longint; frame: PAVFrame): longint; cdecl; external libavformat;
function av_interleaved_write_uncoded_frame(s: PAVFormatContext; stream_index: longint; frame: PAVFrame): longint; cdecl; external libavformat;
function av_write_uncoded_frame_query(s: PAVFormatContext; stream_index: longint): longint; cdecl; external libavformat;
function av_write_trailer(s: PAVFormatContext): longint; cdecl; external libavformat;
function av_guess_format(short_name: pchar; filename: pchar; mime_type: pchar): PAVOutputFormat; cdecl; external libavformat;
function av_guess_codec(fmt: PAVOutputFormat; short_name: pchar; filename: pchar; mime_type: pchar; _type: TAVMediaType): TAVCodecID; cdecl; external libavformat;
function av_get_output_timestamp(s: PAVFormatContext; stream: longint; dts: Pint64_t; wall: Pint64_t): longint; cdecl; external libavformat;
procedure av_hex_dump(f: PFILE; buf: Puint8_t; size: longint); cdecl; external libavformat;
procedure av_hex_dump_log(avcl: pointer; level: longint; buf: Puint8_t; size: longint); cdecl; external libavformat;
procedure av_pkt_dump2(f: PFILE; pkt: PAVPacket; dump_payload: longint; st: PAVStream); cdecl; external libavformat;
procedure av_pkt_dump_log2(avcl: pointer; level: longint; pkt: PAVPacket; dump_payload: longint; st: PAVStream); cdecl; external libavformat;
function av_codec_get_id(tags: PPAVCodecTag; tag: dword): TAVCodecID; cdecl; external libavformat;
function av_codec_get_tag(tags: PPAVCodecTag; id: TAVCodecID): dword; cdecl; external libavformat;
function av_codec_get_tag2(tags: PPAVCodecTag; id: TAVCodecID; tag: Pdword): longint; cdecl; external libavformat;
function av_find_default_stream_index(s: PAVFormatContext): longint; cdecl; external libavformat;
function av_index_search_timestamp(st: PAVStream; timestamp: Tint64_t; flags: longint): longint; cdecl; external libavformat;
function avformat_index_get_entries_count(st: PAVStream): longint; cdecl; external libavformat;
function avformat_index_get_entry(st: PAVStream; idx: longint): PAVIndexEntry; cdecl; external libavformat;
function avformat_index_get_entry_from_timestamp(st: PAVStream; wanted_timestamp: Tint64_t; flags: longint): PAVIndexEntry; cdecl; external libavformat;
function av_add_index_entry(st: PAVStream; pos: Tint64_t; timestamp: Tint64_t; size: longint; distance: longint; flags: longint): longint; cdecl; external libavformat;
procedure av_url_split(proto: pchar; proto_size: longint; authorization: pchar; authorization_size: longint; hostname: pchar;
  hostname_size: longint; port_ptr: Plongint; path: pchar; path_size: longint; url: pchar); cdecl; external libavformat;
procedure av_dump_format(ic: PAVFormatContext; index: longint; url: pchar; is_output: longint); cdecl; external libavformat;

const
  AV_FRAME_FILENAME_FLAGS_MULTIPLE = 1;

function av_get_frame_filename2(buf: pchar; buf_size: longint; path: pchar; number: longint; flags: longint): longint; cdecl; external libavformat;
function av_get_frame_filename(buf: pchar; buf_size: longint; path: pchar; number: longint): longint; cdecl; external libavformat;
function av_filename_number_test(filename: pchar): longint; cdecl; external libavformat;
function av_sdp_create(ac: PPAVFormatContext; n_files: longint; buf: pchar; size: longint): longint; cdecl; external libavformat;
function av_match_ext(filename: pchar; extensions: pchar): longint; cdecl; external libavformat;
function avformat_query_codec(ofmt: PAVOutputFormat; codec_id: TAVCodecID; std_compliance: longint): longint; cdecl; external libavformat;
function avformat_get_riff_video_tags: PAVCodecTag; cdecl; external libavformat;
function avformat_get_riff_audio_tags: PAVCodecTag; cdecl; external libavformat;
function avformat_get_mov_video_tags: PAVCodecTag; cdecl; external libavformat;
function avformat_get_mov_audio_tags: PAVCodecTag; cdecl; external libavformat;
function av_guess_sample_aspect_ratio(format: PAVFormatContext; stream: PAVStream; frame: PAVFrame): TAVRational; cdecl; external libavformat;
function av_guess_frame_rate(ctx: PAVFormatContext; stream: PAVStream; frame: PAVFrame): TAVRational; cdecl; external libavformat;
function avformat_match_stream_specifier(s: PAVFormatContext; st: PAVStream; spec: pchar): longint; cdecl; external libavformat;
function avformat_queue_attached_pictures(s: PAVFormatContext): longint; cdecl; external libavformat;

type
  TAVTimebaseSource = longint;

const
  AVFMT_TBCF_AUTO = -(1);
  AVFMT_TBCF_DECODER = (-(1)) + 1;
  AVFMT_TBCF_DEMUXER = (-(1)) + 2;
  AVFMT_TBCF_R_FRAMERATE = (-(1)) + 3;

function avformat_transfer_internal_stream_timing_info(ofmt: PAVOutputFormat; ost: PAVStream; ist: PAVStream; copy_tb: TAVTimebaseSource): longint; cdecl; external libavformat;
function av_stream_get_codec_timebase(st: PAVStream): TAVRational; cdecl; external libavformat;

// === Konventiert am: 14-12-25 15:21:18 ===


implementation


end.
